api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-api
  namespace: workshop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: checkout-api
  template:
    metadata:
      labels:
        app: checkout-api
    spec:
      containers:
        - name: checkout-api
          image: checkout-api-checkout-api:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
      volumes:
        - name: migrations
          configMap:
            name: checkout-migrations
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-api
  namespace: workshop
spec:
  selector:
    app: checkout-api
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
